feat:change buildsrc dependency

--- a/clickdebounce/src/main/res/values/strings.xml
+++ b/clickdebounce/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
   <string name="app_name">debounce</string>
+  <string name="dengwei">dengwei</string>
+  <string name="dengweiiiiiiii">dengwei2222</string>
 </resources>
